# HackEDBeta2018

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SFMLTEST/: Menu.cpp  Menu.h  main.cpp  pong_graphics.cpp  run menu  sfml-app
ml/: DQN_pong_trainer.py  ReadFIFO.py  keras_pong_trainer.py  model_runner.py  pipe_pb2.py  pong_model_checkpoint.h5  process.py  reward_plotter.py
pong/: AIInput.cpp  BaseGame.cpp  BaseOutput.cpp  CMakeLists.txt  GameObject.cpp  GameObjects.cpp  GraphicsOutput.cpp  HeadlessOutput.cpp  InputManager.cpp  KeyboardInput.cpp  Menu.cpp  OutputManager.cpp  WindowManager.cpp  main.cpp  pipe.pb.cc
pong/include/: AIInput.h  BaseGame.h  BaseInput.h  BaseOutput.h  GameObject.h  GameObjects.h  GraphicsOutput.h  HeadlessOutput.h  InputManager.h  KeyboardInput.h  OutputManager.h  WindowManager.h  pipe.pb.h
proto/: pipe.proto
